c4prj2_input/grade.txt
Grading at Thu Aug  1 12:14:34 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:6:45: error: unknown type name ‘futrue_cards_t’
 deck_t * hand_from_string(const char * str, futrue_cards_t * fc){
                                             ^
input.c:36:22: error: unknown type name ‘FILE’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                      ^
Compilation of input.c failed

Overall Grade: F
